--- a/FRONT/src/app/app.component.html
+++ b/FRONT/src/app/app.component.html
@@ -1,7 +1,5 @@
-<router-outlet></router-outlet>
-
-<ol>
-    <li *ngFor="let produto of produtos">
-        {{ produto.nome }}
-    </li>
-</ol>
+<header>Cabeçalho</header>
+<nav>Navegação</nav>
+<router-outlet> </router-outlet>
+<!-- Espaço reservado para o conteúdo dinâmico (componentes - views) -->
+<footer>Rodapé</footer>
