--- a/FRONT/src/app/components/template/template.component.html
+++ b/FRONT/src/app/components/template/template.component.html
@@ -2,10 +2,10 @@
     <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon> menu </mat-icon>
     </button>
-    <span> Ecommerce </span>
+    <a class="title" mat-button routerLink=""> Ecommerce</a>
 </mat-toolbar>
 <mat-sidenav-container class="container">
-    <mat-sidenav #sidenav opened mode="side">
+    <mat-sidenav #sidenav mode="side">
         <mat-nav-list>
             <a mat-list-item routerLink="/produto/cadastrar">
                 <mat-icon class="icon"> add </mat-icon>Novo Produto</a
