--- a/FRONT/src/app/components/views/produto/listar-produto/listar-produto.component.html
+++ b/FRONT/src/app/components/views/produto/listar-produto/listar-produto.component.html
@@ -26,7 +26,9 @@
     <!-- Coluna do Preço -->
     <ng-container matColumnDef="preco">
         <th class="header" mat-header-cell *matHeaderCellDef>Preço</th>
-        <td mat-cell *matCellDef="let produto">{{ produto.preco }}</td>
+        <td mat-cell *matCellDef="let produto">
+            {{ produto.preco | currency: "BRL" }}
+        </td>
     </ng-container>
     <!-- Coluna do Categoria -->
     <ng-container matColumnDef="categoria">
