--- a/FRONT/src/app/components/template/template.component.html
+++ b/FRONT/src/app/components/template/template.component.html
@@ -3,6 +3,12 @@
         <mat-icon> menu </mat-icon>
     </button>
     <a class="title" mat-button routerLink=""> Ecommerce</a>
+    <span class="spacer"></span>
+    <a routerLink="/home/carrinho" mat-icon-button>
+        <mat-icon matBadge="{{ totalItens }}" matBadgeColor="warn">
+            shopping_cart
+        </mat-icon>
+    </a>
 </mat-toolbar>
 <mat-sidenav-container class="container">
     <mat-sidenav #sidenav mode="side">
