--- a/FRONT/src/app/components/template/template.component.html
+++ b/FRONT/src/app/components/template/template.component.html
@@ -13,8 +13,8 @@
 <mat-sidenav-container class="container">
     <mat-sidenav #sidenav mode="side">
         <mat-nav-list>
-            <a mat-list-item routerLink="/produto/cadastrar">
-                <mat-icon class="icon"> add </mat-icon>Novo Produto</a
+            <a mat-list-item routerLink="/funcionario/cadastrar">
+                <mat-icon class="icon"> add </mat-icon>Novo Funcionário</a
             >
             <a mat-list-item routerLink="/produto/listar">
                 <mat-icon class="icon"> list </mat-icon>Listar Produtos</a
