--- a/FRONT/src/app/components/template/template.component.html
+++ b/FRONT/src/app/components/template/template.component.html
@@ -16,8 +16,8 @@
             <a mat-list-item routerLink="/funcionario/cadastrar">
                 <mat-icon class="icon"> add </mat-icon>Novo Funcionário</a
             >
-            <a mat-list-item routerLink="/produto/listar">
-                <mat-icon class="icon"> list </mat-icon>Listar Produtos</a
+            <a mat-list-item routerLink="/funcionario/listar">
+                <mat-icon class="icon"> list </mat-icon>Listar Funcionarios</a
             >
         </mat-nav-list>
     </mat-sidenav>
