exercicio 2  pronto de verdade

--- a/FRONT/src/app/components/template/template.component.html
+++ b/FRONT/src/app/components/template/template.component.html
@@ -19,6 +19,9 @@
             <a mat-list-item routerLink="/funcionario/listar">
                 <mat-icon class="icon"> list </mat-icon>Listar Funcionarios</a
             >
+            <a mat-list-item routerLink="/folha/cadastrar">
+                <mat-icon class="icon"> add </mat-icon>Nova Folha de Pagamentos</a
+            >
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="content">
