--- a/FRONT/src/app/components/template/template.component.html
+++ b/FRONT/src/app/components/template/template.component.html
@@ -22,6 +22,10 @@
             <a mat-list-item routerLink="/folha/cadastrar">
                 <mat-icon class="icon"> add </mat-icon>Nova Folha de Pagamentos</a
             >
+            <a mat-list-item routerLink="/folha/listar">
+                <mat-icon class="icon"> list </mat-icon>Listar Folhas de Pagamento</a
+            >
+            
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="content">
