--- a/FRONT/src/app/components/views/funcionario/listar-folha/listar-folha.component.html
+++ b/FRONT/src/app/components/views/funcionario/listar-folha/listar-folha.component.html
@@ -48,6 +48,14 @@
         <th class="header" mat-header-cell *matHeaderCellDef>Salário Líquido</th>
         <td mat-cell *matCellDef="let folha">{{ folha.salarioLiquido }}</td>
     </ng-container>
+    <ng-container matColumnDef="acoes">
+        <th class="header" mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let folha">
+        <button mat-mini-fab color="primary" aria-label="Example icon button with a menu icon">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+    </ng-container>
     <tr mat-header-row *matHeaderRowDef="colunasExibidas"></tr>
     <tr mat-row *matRowDef="let row; columns: colunasExibidas"></tr>
 </table>
